test-suite/bugs/closed/3483.v
(* Check proper failing when using notation of non-constructors in
   pattern-bmatching *)

Fail Definition nonsense ( x : False ) := match x with y + 2 => 0 end.

